# Sentiment140

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
api/: inference.py  main.py  pyproject.toml  requirements.txt  schemas.py
data/encoded/: tfidf_bi_vectorizer.pkl
data/processed/: best_preproc_config.json
models/: best_model.pkl  best_model_card.json
notebooks/: 01_preprocessing.ipynb  02_encoding.ipynb  03_baseline.ipynb  04_models_daniel.ipynb  04_models_nicolas.ipynb  05_distilbert.ipynb  05_distilbert_10pct.ipynb
