[project]
name = "sentiment140"
version = "0.1.0"
description = "Sentiment analysis on Sentiment140 dataset — NLP lab comparing classical ML vs DistilBERT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=2.18.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "spacy>=3.7.0",
    "nltk>=3.8.0",
    "emoji>=2.10.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "transformers>=4.39.0",
    "torch>=2.2.0",
    "mlflow>=2.11.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pip>=26.0.1",
]
