[project]
name = "sentiment140-api"
version = "0.1.0"
description = "FastAPI inference API for the Sentiment140 project"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "spacy>=3.7.0",
    "nltk>=3.8.0",
    "emoji>=2.10.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "mlflow>=2.11.0",
    "numpy>=1.26.0",
]

[tool.uv]
# Directorio de aplicación, no un paquete instalable
package = false
